[project]
name = "api"
version = "0.1.0"
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "python-dotenv",
    "supabase"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
only-include = [
    "main.py",
    "models"
]

[tool.fastapi]
entrypoint = "main:app"